concord_macros/tests/dsl/fail/fail_rate_limit_zero_cost.stderr
error: rate_limit bucket cost must be greater than zero
  --> tests/dsl/fail/fail_rate_limit_zero_cost.rs:10:22
   |
10 |                 cost 0
   |                      ^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_rate_limit_zero_cost.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
